Mobile gap style correction

--- a/styles/trainings.module.scss
+++ b/styles/trainings.module.scss
@@ -66,6 +66,7 @@
   .textAndImage {
     display: flex;
     flex-direction: column;
+    gap: 1.5rem;
   }
   .text {
     max-width: 100%;
